--- a/res/layout/gas_list_label.xml
+++ b/res/layout/gas_list_label.xml
@@ -9,15 +9,26 @@
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	/>
+	
+	<TextView 
+	android:id="@+id/gas_list_label_text"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:layout_weight="2"
+	android:text="ttt"
+	/>
 	<ImageButton
 	android:src="@drawable/pencil"
+	android:id="@+id/gas_list_label_edit"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:text="Edit" 
 	 />
-	<TextView 
+	 <ImageButton
+	android:src="@drawable/trash"
+	android:id="@+id/gas_list_label_delete"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:text="ttt"
-	/>
+	android:text="Edit" 
+	 />
 </LinearLayout>
