--- a/res/layout/gas_list_label.xml
+++ b/res/layout/gas_list_label.xml
@@ -6,6 +6,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<CheckBox
+	android:id="@+id/gas_list_label_check_box"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	/>
