changed linear layout on result view in to scroll layout segment dialog added segment dialog now able to edit segment add button on segment list still doesn't work segment dialog ok and cancel doesnt work yet

--- a/res/layout/segment_list_label.xml
+++ b/res/layout/segment_list_label.xml
@@ -9,15 +9,15 @@
 	android:id="@+id/segment_list_label_check_box"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	/>
+	android:layout_gravity="center"/>
 	
 	<TextView 
 	android:id="@+id/segment_list_label_text"
-	android:textSize="10px"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:layout_weight="2"
-	android:text="ttt"
+	android:layout_gravity="center"
+	android:text="ssss"
 	/>
 	<ImageButton
 	android:src="@drawable/pencil"
@@ -25,12 +25,13 @@
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:text="Edit" 
-	 />
+	 android:layout_gravity="center"/>
 	 <ImageButton
 	android:src="@drawable/trash"
 	android:id="@+id/segment_list_label_delete"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:text="Edit" 
+	android:layout_gravity="center"
 	 />
 </LinearLayout>
