--- a/res/layout/profile_text_view.xml
+++ b/res/layout/profile_text_view.xml
@@ -14,13 +14,16 @@
 
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent" android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+android:layout_width="fill_parent" 
+android:layout_height="fill_parent" 
+android:orientation="vertical">
+
 	<TextView android:layout_height="wrap_content"
 		android:layout_width="fill_parent" android:id="@+id/profile_text_view_text"
 		android:text="@string/welcome_intro"></TextView>
 
 
 
-</LinearLayout>
+</ScrollView>
