--- a/res/layout/segment_dialog.xml
+++ b/res/layout/segment_dialog.xml
@@ -21,7 +21,7 @@ android:orientation="vertical">
 
 <LinearLayout  
 android:layout_width="fill_parent" 
-android:layout_height="fill_parent" 
+android:layout_height="wrap_content" 
 android:orientation="vertical" >
 
 <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content">
@@ -31,10 +31,10 @@ android:orientation="vertical" >
 	<EditText 
 		android:layout_gravity="center"
 	 	android:layout_weight="1"
-		android:inputType="number" 
+		android:inputType="numberDecimal" 
 		android:layout_height="wrap_content" 
 		android:id="@+id/SegmentDialogDepth" 
-		android:layout_width="fill_parent"></EditText>
+		android:layout_width="0dp"></EditText>
 </LinearLayout>
 
 <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
@@ -48,7 +48,7 @@ android:orientation="vertical" >
 	 	android:layout_weight="1"
 		android:layout_gravity="right" 
 		android:inputType="number" 
-		android:layout_width="match_parent"></EditText>
+		android:layout_width="0dp"></EditText>
 </LinearLayout>
 
 <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content">
@@ -58,11 +58,11 @@ android:orientation="vertical" >
 	<EditText 
 		android:text=""
 		 android:id="@+id/SegmentDialogSetPoint" 
-		android:layout_width="fill_parent"
+		android:layout_width="0dp"
 	 	android:layout_height="wrap_content"
 	 	android:layout_gravity="center"
 	 	android:layout_weight="1"
-	 	android:inputType="number" 
+	 	android:inputType="numberDecimal" 
 		></EditText>
 </LinearLayout>
 <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content">
