--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -1,10 +1,30 @@
-    <resources>
-        <string-array name="units_text">
-            <item>Metric</item>
-            <item>Imperial</item>
-        </string-array>
-           <string-array name="units_id">
-            <item>0</item>
-            <item>1</item>
-        </string-array>
-    </resources>
+<resources>
+
+    <string-array name="units_text">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+    <string-array name="units_id">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="displayType">
+        <item>Text Detailed</item>
+        <item>Text Brief</item>
+    </string-array>
+
+    <string-array name="displayTypeValue">
+        <item>1</item>
+        <item>0</item>
+    </string-array>
+
+    <string-array name="model_text">
+        <item>ZHL - 16B</item>
+        <item>ZHL - 16C</item>
+    </string-array>
+    <string-array name="model_value">
+        <item>ZHL16B</item>
+        <item>ZHL16C</item>
+    </string-array>
+
+</resources>
