--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2007 The Android Open Source Project Licensed under the 
-	Apache License, Version 2.0 (the "License"); you may not use this file except 
-	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-	Unless required by applicable law or agreed to in writing, software distributed 
-	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
-	the specific language governing permissions and limitations under the License.
--->
-
-<!--
-     Demonstrates use of the com.google.android.maps.MapView. See corresponding 
-	Java code com.example.android.apis.view.MapViewDemo.java.
--->
-
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scrollView1"
@@ -33,6 +18,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/welcome_intro" />
 
+            <CheckBox
+                android:id="@+id/welcome_show_later"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/welcome_show_later" />
+
             <Button
                 android:id="@+id/ButtonOpenPlanner"
                 android:layout_width="fill_parent"
@@ -43,11 +34,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <!-- Button
-        android:id="@+id/ButtonOpenDivelog"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="@string/OpenDiveLog" >
-    </Button-->
 
