--- a/res/menu/plannermenu.xml
+++ b/res/menu/plannermenu.xml
@@ -18,4 +18,6 @@
 
     <item android:id="@+id/plan_menu_preferences"
         android:title="@string/preferences" />
+    <item android:id="@+id/plan_menu_about"
+        android:title="@string/plan_menu_about" />
 </menu>
